# secure-connction

./: Dockerfile  README.md  build.sh  common.h  server.c
src/: CMakeLists.txt  client.c
ssl-certificates/: generate_certs_keys.txt
ssl-certificates/CA/: ca-cert.pem  ca-key.pem
ssl-certificates/client/: client-cert.pem  client-csr.pem  client-key.pem
ssl-certificates/server/: server-cert.pem  server-csr.pem  server-key.pem
